# applicants

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
nginx/: default.conf
src/: alembic.ini  main.py
src/api/: app.py  applicants.py
src/api/auth/: auth.py  manager.py  model.py  schemas.py
src/app/: schemas.py
src/app/parsers/: __init__.py  agtu.py  guz.py  ieup.py  lesgaft.py  mggeu.py  mgotu.py  mhti.py  omgups.py  pstu.py  ptsu.py  rgsu.py  rgup.py  spbgeu.py  spbgtu.py  spbutuie.py  ugtu.py
src/app/repository/: __init__.py  applicants_repository.py
src/infrastructure/redis/: db.py  handlers.py
src/infrastructure/sql/: config.py  container.py  db.py
src/infrastructure/sql/migrations/: env.py
src/infrastructure/sql/migrations/versions/: 377d8214dc39_.py  413ac3f93344_.py
src/infrastructure/sql/models/: __init__.py  applicant.py  model.py
src/worker/: celery.py  celeryconfig.py
