[tool.poetry]
name = "applicants"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.9"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
asyncpg = "^0.27.0"
alembic = "^1.10.4"
dependency-injector = "^4.41.0"
celery = "^5.2.7"
redis = "^4.5.4"
pdfplumber = "^0.9.0"
pandas = "^2.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
aioredis = "^2.0.1"
setuptools = "^67.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
